git-svn-id: svn://localhost/Media%20Server@14 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/plugins/.htaccess
+++ b/plugins/.htaccess
@@ -1,6 +1,7 @@
 
 RewriteEngine on
 
-RewriteBase   /mediaserver/plugins/
+RewriteBase   /plugins/
 RewriteRule ^file/(.*)/([0-9]*)/(.*)$ file.php?cat=$1&id=$2&filename=$3 [L]
 RewriteRule ^bt/(([0-9]*,?)*)/(.*)$ bt.php?item=$1&btorrent= [L]
+RewriteRule ^zip/(([0-9]*,?)*)/(.*)$ zip.php?item=$1&zip= [L]
