--- a/plugins/.htaccess
+++ b/plugins/.htaccess
@@ -5,4 +5,7 @@ RewriteBase   /plugins/
 RewriteRule ^file/(.*)/([0-9]*)/(.*)$ file.php?cat=$1&id=$2&filename=$3 [L]
 RewriteRule ^bt/(([0-9]*,?)*)/(.*)$ bt.php?item=$1&btorrent= [L]
 RewriteRule ^zip/(([0-9]*,?)*)/(.*)$ zip.php?item=$1&zip= [L]
-RewriteRule ^passthru/([0-9]*)/(WMV|MPG|MP4|MP4A|MP3|WMA)/(.*)$ passthru.php?id=$1&encode=$2 [L]
+RewriteRule ^list/(([0-9]*,?)*)/(.*)$ list.php?item=$1&filename=$2&list= [L]
+RewriteRule ^list/(.*)$ list.php?filename=$1&list= [L]
+RewriteRule ^encode/([0-9]*)/(WMV|MPG|MP4|MP4A|MP3|WMA)/(.*)$ encode.php?id=$1&encode=$2 [L]
+RewriteRule ^convert/([0-9]*)/(JPEG|GIF|PNG)/(.*)$ convert.php?id=$1&convert=$2 [L]
