git-svn-id: svn://localhost/Media%20Server@40 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/plugins/.htaccess
+++ b/plugins/.htaccess
@@ -5,7 +5,8 @@ RewriteBase   /plugins/
 RewriteRule ^file/(.*)/([0-9]*)/(.*)$ file.php?cat=$1&id=$2&filename=$3 [L]
 RewriteRule ^bt/(([0-9]*,?)*)/(.*)$ bt.php?item=$1&btorrent= [L]
 RewriteRule ^zip/(([0-9]*,?)*)/(.*)$ zip.php?item=$1&zip= [L]
-RewriteRule ^list/(([0-9]*,?)*)/(.*)$ list.php?item=$1&filename=$2&list= [L]
+RewriteRule ^list/(([0-9]*,?)*)/(WM|MP4|MPG)/(.*)$ list.php?item=$1&m3u_type=$3&filename=$4&type=m3u&list= [L]
+RewriteRule ^list/(([0-9]*,?)*)/(.*)$ list.php?item=$1&filename=$3&list= [L]
 RewriteRule ^list/(.*)$ list.php?filename=$1&list= [L]
 RewriteRule ^encode/([0-9]*)/(WMV|MPG|MP4|MP4A|MP3|WMA)/(.*)$ encode.php?id=$1&encode=$2 [L]
-RewriteRule ^convert/([0-9]*)/(JPEG|GIF|PNG)/(.*)$ convert.php?id=$1&convert=$2 [L]
+RewriteRule ^convert/([0-9]*)/(JPG|GIF|PNG)/(.*)$ convert.php?id=$1&convert=$2 [L]
