--- a/.htaccess
+++ b/.htaccess
@@ -7,10 +7,11 @@
 
 RewriteEngine on
 
-RewriteRule ^plugins/([^/]*)/([^/]*)/([^/]*)$ 							plugins/$1.php?cat=$2&id=$3 [L]
-RewriteRule ^plugins/([^/]*)/([^/]*)/([^/]*)/([^/]*)$ 					plugins/$1.php?cat=$2&id=$3&filename=$4 [L]
-RewriteRule ^plugins/([^/]*)/([^/]*)/([^/]*)/([^/]*)/([^/]*)$ 			plugins/$1.php?cat=$2&id=$3&$1=$4&filename=$5 [L]
-RewriteRule ^plugins/([^/]*)/([^/]*)/([^/]*)/([^/]*)/([^/]*)/([^/]*)$ 	plugins/$1.php?cat=$2&id=$3&$1=$4&extra=$5&filename=$6 [L]
+RewriteRule ^plugins/([^/\.]+)(\.php)?/([^/]*)$ 									plugins/$1.php?includes=$3 [L]
+RewriteRule ^plugins/([^/\.]+)(\.php)?/([^/]*)/([^/]*)$ 							plugins/$1.php?cat=$3&id=$4 [L]
+RewriteRule ^plugins/([^/\.]+)(\.php)?/([^/]*)/([^/]*)/([^/]*)$ 					plugins/$1.php?cat=$3&id=$4&filename=$5 [L]
+RewriteRule ^plugins/([^/\.]+)(\.php)?/([^/]*)/([^/]*)/([^/]*)/([^/]*)$ 			plugins/$1.php?cat=$3&id=$4&$1=$5&filename=$6 [L]
+RewriteRule ^plugins/([^/\.]+)(\.php)?/([^/]*)/([^/]*)/([^/]*)/([^/]*)/([^/]*)$ 	plugins/$1.php?cat=$3&id=$4&$1=$5&extra=$6&filename=$7 [L]
 
 
 </IfModule>
