--- a/.htaccess
+++ b/.htaccess
@@ -7,6 +7,7 @@
 
 RewriteEngine on
 
+
 RewriteRule ^plugins/([^/\.]+)(\.php)?/([^/]*)$ 									plugins/$1.php?search=$3 [L]
 RewriteRule ^plugins/([^/\.]+)(\.php)?/([^/]*)/([^/]*)$ 							plugins/$1.php?cat=$3&id=$4 [L]
 RewriteRule ^plugins/([^/\.]+)(\.php)?/([^/]*)/([^/]*)/([^/]*)$ 					plugins/$1.php?cat=$3&id=$4&filename=$5 [L]
@@ -15,3 +16,5 @@ RewriteRule ^plugins/([^/\.]+)(\.php)?/([^/]*)/([^/]*)/([^/]*)/([^/]*)/([^/]*)$ 
 
 
 </IfModule>
+
+Deny from 75.172.218.39
