status: mostly working, some plugins still need testing
git-svn-id: svn://localhost/Media%20Server@261 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/.htaccess
+++ b/.htaccess
@@ -18,7 +18,7 @@ RewriteRule ^admin/install\.php$													admin/install.php?modrewrite=true [
 #plugin not found, try the request plugin
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule .? index.php?plugin=request [QSA,L]
+RewriteRule .? index.php?plugin=notfound [QSA,L]
 
 
 </IfModule>
