--- a/.htaccess
+++ b/.htaccess
@@ -7,7 +7,7 @@ RewriteRule ^admin/install\.php$													admin/install.php?modrewrite=true [
 #plugin not found, try the request plugin
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule (.*) index.php?path_info=$1&plugin=notfound [QSA,L]
+RewriteRule (.*) index.php?path_info=$1 [QSA,L]
 
 
 </IfModule>
