--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,8 @@
+
+<FilesMatch "\.(engine|inc|info|install|module|profile|test|po|sh|.*sql|theme|tpl(\.php)?|xtmpl|svn-base)$|^(code-style\.pl|Entries.*|Repository|Root|Tag|Template|all-wcprops|entries|format)$">
+  Order allow,deny
+</FilesMatch>
+
 <IfModule mod_rewrite.c>
 
 RewriteEngine on
