--- a/.htaccess
+++ b/.htaccess
@@ -8,7 +8,9 @@
 RewriteEngine on
 
 #plugin not found, try the request plugin
-RewriteRule (.*) index.php?path_info=$1 [QSA,L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ index.php [L,QSA]
 
 
 </IfModule>
